@@ -32,6 +32,16 @@
 
     <properties>
         <spotless.check.skip>true</spotless.check.skip>
+
+        <!--region Error Prone: -Perrorprone[-strict|-patch|-untested] -->
+        <!-- EqualsGetClass:OFF due to https://github.com/google/error-prone/issues/1144 -->
+        <errorprone.flags.suppressed>-Xep:CanIgnoreReturnValueSuggester:OFF -Xep:NullableOnContainingClass:OFF -Xep:OperatorPrecedence:OFF -Xep:EqualsGetClass:OFF -Xep:UnusedVariable:WARN</errorprone.flags.suppressed>
+        <errorprone.flags.promoted>-Xep:CanIgnoreReturnValueSuggester:ERROR -Xep:NullableOnContainingClass:ERROR -Xep:OperatorPrecedence:ERROR -Xep:EqualsGetClass:ERROR -Xep:UnusedVariable:ERROR -Xep:BadImport:ERROR -Xep:DefaultCharset:ERROR -Xep:DirectReturn:ERROR -Xep:IdentityConversion:ERROR -Xep:InvalidInlineTag:ERROR -Xep:JavaDurationGetSecondsToToSeconds:ERROR -Xep:MissingOverride:ERROR -Xep:ObjectToString:ERROR -Xep:RedundantStringConversion:ERROR -Xep:StringCaseLocaleUsage:ERROR -Xep:StringSplitter:ERROR -Xep:UnnecessaryLambda:ERROR -Xep:ClassCastLambdaUsage:ERROR -Xep:IsInstanceLambdaUsage:ERROR -Xep:EagerStringFormatting:ERROR -Xep:FormatStringConcatenation:ERROR -Xep:NestedOptionals:ERROR -Xep:OptionalOrElseGet:ERROR -Xep:PrimitiveComparison:ERROR -Xep:RedundantStringEscape:ERROR -Xep:StringJoining:ERROR -Xep:EmptyMethod:ERROR -Xep:Slf4jLogStatement:ERROR -Xep:Slf4jLoggerDeclaration:ERROR -Xep:JUnitClassModifiers:ERROR -Xep:JUnitMethodDeclaration:ERROR -Xep:MockitoMockClassReference:ERROR -Xep:MockitoStubbing:ERROR</errorprone.flags.promoted>
+        <errorprone.flags.untested>-Xep:AssertJNullnessAssertion:ERROR -Xep:AssertJOptionalAssertion:ERROR -Xep:CollectorMutability:ERROR -Xep:ConstantNaming:ERROR -Xep:ExplicitArgumentEnumeration:ERROR -Xep:ExplicitEnumOrdering:ERROR -Xep:JUnitNullaryParameterizedTestDeclaration:ERROR -Xep:JUnitValueSource:ERROR -Xep:LexicographicalAnnotationAttributeListing:ERROR -Xep:LexicographicalAnnotationListing:ERROR -Xep:StaticImport:ERROR -Xep:NonStaticImport:ERROR -Xep:TimeZoneUsage:ERROR -Xep:ImmutablesSortedSetComparator:ERROR -Xep:CanonicalAnnotationSyntax:ERROR -Xep:CanonicalClassNameUsage:ERROR -Xep:AmbiguousJsonCreator:ERROR -Xep:MongoDBTextFilterUsage:ERROR -Xep:RequestParamType:ERROR</errorprone.flags.untested>
+        <errorprone.flags.strict.addon />
+        <errorprone.flags.patch.addon />
+        <errorprone.flags.untested.addon />
+        <!--endregion Error Prone -->
     </properties>
 
     <dependencyManagement>
@@ -835,7 +845,6 @@
         <!--endregion Phase 1: validate-->
 
         <!--region Phase 7: compile-->
-        <!-- profile:errorprone -->
         <profile>
             <id>errorprone</id>
             <build>
@@ -849,16 +858,13 @@
                                 <arg>-XDcompilePolicy=simple</arg>
                                 <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
                                 <arg>--should-stop=ifError=FLOW</arg>
-                                <arg>
-                                    -Xplugin:ErrorProne \
+                                <arg>-Xplugin:ErrorProne \
                                     -XepExcludedPaths:.*/generated-sources/.* \
-                                    -Xep:CanIgnoreReturnValueSuggester:OFF \
-                                    -Xep:NullableOnContainingClass:OFF \
-                                    -Xep:OperatorPrecedence:OFF \
-                                    <!-- Suppressing EqualsGetClass due to https://github.com/google/error-prone/issues/1144 -->
-                                    -Xep:EqualsGetClass:OFF \
-                                    -Xep:UnusedVariable:WARN
-                                </arg>
+                                    -XepOpt:Refaster:NamePattern=^(?!PreconditionsRules\$).* \
+                                    ${errorprone.flags.suppressed} \
+                                    ${errorprone.flags.strict.addon} \
+                                    ${errorprone.flags.patch.addon} \
+                                    ${errorprone.flags.untested.addon}</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
@@ -894,134 +900,29 @@
         </profile>
         <!-- /profile:errorprone -->
 
-        <!-- profile:errorprone-strict -->
         <profile>
             <id>errorprone-strict</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <fork>true</fork>
-                            <compilerArgs combine.children="append">
-                                <arg>-XDcompilePolicy=simple</arg>
-                                <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
-                                <arg>--should-stop=ifError=FLOW</arg>
-                                <arg>-Xplugin:ErrorProne \
-                                    -XepExcludedPaths:.*/generated-sources/.* \
-                                    -Xep:BadImport:ERROR \
-                                    -Xep:DefaultCharset:ERROR \
-                                    -Xep:DirectReturn:ERROR \
-                                    -Xep:IdentityConversion:ERROR \
-                                    -Xep:InvalidInlineTag:ERROR \
-                                    -Xep:JavaDurationGetSecondsToToSeconds:ERROR \
-                                    -Xep:MissingOverride:ERROR \
-                                    -Xep:ObjectToString:ERROR \
-                                    -Xep:RedundantStringConversion:ERROR \
-                                    -Xep:StringCaseLocaleUsage:ERROR \
-                                    -Xep:StringSplitter:ERROR \
-                                    -Xep:UnnecessaryLambda:ERROR</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                            <annotationProcessorPaths combine.children="append">
-                                <path>
-                                    <groupId>com.google.errorprone</groupId>
-                                    <artifactId>error_prone_core</artifactId>
-                                    <version>2.46.0</version>
-                                </path>
-                                <path>
-                                    <groupId>tech.picnic.error-prone-support</groupId>
-                                    <artifactId>error-prone-contrib</artifactId>
-                                    <version>0.28.0</version>
-                                </path>
-                                <path>
-                                    <groupId>tech.picnic.error-prone-support</groupId>
-                                    <artifactId>refaster-runner</artifactId>
-                                    <version>0.28.0</version>
-                                </path>
-                            </annotationProcessorPaths>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <errorprone.flags.strict.addon>${errorprone.flags.promoted}</errorprone.flags.strict.addon>
+            </properties>
         </profile>
         <!-- /profile:errorprone-strict -->
 
-        <!-- profile:errorprone-patch -->
         <profile>
             <id>errorprone-patch</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <fork>true</fork>
-                            <compilerArgs combine.children="append">
-                                <arg>-XDcompilePolicy=simple</arg>
-                                <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
-                                <arg>--should-stop=ifError=FLOW</arg>
-                                <arg>-Xplugin:ErrorProne \
-                                    -XepExcludedPaths:.*/generated-sources/.* \
-                                    -XepPatchChecks:Refaster,DirectReturn,IdentityConversion \
-                                    -XepPatchLocation:IN_PLACE \
-                                    -XepOpt:Refaster:NamePattern=^(?!PreconditionsRules\$).* \
-                                    -Xep:BadImport:ERROR \
-                                    -Xep:DefaultCharset:ERROR \
-                                    -Xep:DirectReturn:ERROR \
-                                    -Xep:IdentityConversion:ERROR \
-                                    -Xep:InvalidInlineTag:ERROR \
-                                    -Xep:JavaDurationGetSecondsToToSeconds:ERROR \
-                                    -Xep:MissingOverride:ERROR \
-                                    -Xep:ObjectToString:ERROR \
-                                    -Xep:RedundantStringConversion:ERROR \
-                                    -Xep:StringCaseLocaleUsage:ERROR \
-                                    -Xep:StringSplitter:ERROR \
-                                    -Xep:UnnecessaryLambda:ERROR</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                            <annotationProcessorPaths combine.children="append">
-                                <path>
-                                    <groupId>com.google.errorprone</groupId>
-                                    <artifactId>error_prone_core</artifactId>
-                                    <version>2.46.0</version>
-                                </path>
-                                <path>
-                                    <groupId>tech.picnic.error-prone-support</groupId>
-                                    <artifactId>error-prone-contrib</artifactId>
-                                    <version>0.28.0</version>
-                                </path>
-                                <path>
-                                    <groupId>tech.picnic.error-prone-support</groupId>
-                                    <artifactId>refaster-runner</artifactId>
-                                    <version>0.28.0</version>
-                                </path>
-                            </annotationProcessorPaths>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <errorprone.flags.patch.addon>-XepPatchChecks:Refaster,DirectReturn,IdentityConversion -XepPatchLocation:IN_PLACE</errorprone.flags.patch.addon>
+            </properties>
         </profile>
         <!-- /profile:errorprone-patch -->
+
+        <profile>
+            <id>errorprone-untested</id>
+            <properties>
+                <errorprone.flags.untested.addon>${errorprone.flags.untested}</errorprone.flags.untested.addon>
+            </properties>
+        </profile>
+        <!-- /profile:errorprone-untested -->
         <!--endregion Phase 7: compile-->
 
         <!--region Phase 15: test-->
